--- a/force-app/main/default/aura/StudentForm/StudentForm.cmp
+++ b/force-app/main/default/aura/StudentForm/StudentForm.cmp
@@ -1,5 +1,7 @@
-<aura:component implements="force:appHostable,flexipage:availableForAllPageTypes,flexipage:availableForRecordHome,force:hasRecordId,forceCommunity:availableForAllPageTypes,force:lightningQuickAction" access="global" >
+<aura:component implements="force:appHostable,flexipage:availableForAllPageTypes,flexipage:availableForRecordHome,force:hasRecordId,forceCommunity:availableForAllPageTypes,force:lightningQuickAction,lightning:actionOverride" access="global" >
 	<lightning:recordEditForm objectApiName='Student_Form__c'>
-    
+        <lightning:inputField fieldName="Name" aria-required=""/>
+        <lightning:button type='submit' label='Save' onclick="{!c.SaveClick}"/>
+        <lightning:button type="cancel" label="cancel"/>
     </lightning:recordEditForm>
 </aura:component>
