--- a/force-app/main/default/aura/QuickOpportunityWindow1/QuickOpportunityWindow1.cmp
+++ b/force-app/main/default/aura/QuickOpportunityWindow1/QuickOpportunityWindow1.cmp
@@ -2,6 +2,7 @@
     <lightning:recordEditForm objectApiName='Opportunity'>
     <lightning:inputField fieldName='Name'/>
     <lightning:inputField fieldName='StageName'/>
-  
+    <lightning:inputField fieldName='CloseDate'/>
+        <lightning:button type='submit' label='Save'/>  
     </lightning:recordEditForm>
 </aura:component>
